# qunomon-lite

./: .dockerignore  .flake8  .gitignore  .mypy.ini  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.yml  requirements-jupyter.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.devcontainer/: devcontainer.json  docker-compose.extend.yml
.github/: labels.toml
.github/workflows/: cd.yml  ci.yml  config-gh-labels.yml
example/: example-cli.md  example-notebook.ipynb
examples/: example-cli.md  example-notebook.ipynb  requirements-jupyter.txt
src/qunomon_lite/: AIT.py  ait.py  ait_core.py  cli.py  print_helper.py  result.py  sample.py  sample_docker.py
tests/: conftest.py  test_AIT.py  test_ait.py  test_ait_core.py  test_cli.py  test_sample.py
tests/data/ait_stub/: entrypoint.sh
tests/data/ait_stub_images/ait_stub/: Dockerfile  entrypoint.sh
tests/data/ait_stub_images/ait_stub_for_err/: entrypoint.sh
tests/data/output1/: ait.output.json
tests/data/output1/-/-/: ait.output.json
tests/data/output1/downloads/ConfusionMatrixCSV/: confusion_matrix.csv
tests/data/output1/downloads/PredictionResult/: prediction.csv
tests/data/output_dirs/output1/-/-/: ait.output.json
tests/data/output_dirs/output4/-/-/: ait.output.json
