[metadata]
name = qunomon-lite
version = attr: qunomon_lite.__version__.__version__

[options]
package_dir =
    =src
packages = qunomon_lite
install_requires =
    docker
    six # https://github.com/docker/docker-py/issues/2842

[options.entry_points]
console_scripts =
    qunomon_lite_sample = qunomon_lite.sample:func2
    qunomon_lite_docker_sample = qunomon_lite.sample_docker:func1

[flake8]
max-line-length = 88
ignore =
exclude = .git, __pycache__, build, dist, .tox, .venv*

[mypy-docker.*]
ignore_missing_imports = true
