[metadata]
name = qunomon-lite
version = attr: qunomon_lite.__version__.__version__

[options]
package_dir =
    =src
packages = qunomon_lite
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.entry_points]
console_scripts =
    qunomon-lite = qunomon_lite.cli:main

[flake8]
max-line-length = 88
exclude = .git, __pycache__, build, dist, .tox, .venv*

[mypy]
python_version = 3.6

[mypy-docker.*]
ignore_missing_imports = true
